fix: puff card had some overflowing text

--- a/src/style.css
+++ b/src/style.css
@@ -308,29 +308,6 @@ p {
 	}
 }
 
-.puff-col {
-	border: 1px solid #000;
-}
-
-.puff-col .btn img {
-	margin-left: 5px;
-}
-
-.puff-col h2 {
-	line-height: 1em;
-	font-size: 2.6em;
-	font-family: "HappyTimes", helvetica;
-}
-
-.puff-col p {
-	margin: 30px 0;
-}
-
-.puff-col img {
-	height: 300px;
-	width: 100%;
-	object-fit: cover;
-}
 .col-content {
 	padding: 40px;
 }
